--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Office & Company - Pasadena Coworking Studio
             <div class="container">
                 <div class="carousel-caption">
                     <h2>Community</h2>
-                    <p class="lead">Working alone is no fun, and often not very effective. We offer more than an office, but company of like-minded, driven individuals.</p>
+                    <p class="lead">Working alone is no fun and often not very effective. We offer more than an office: the company of like-minded, driven individuals.</p>
                 </div>
             </div>
         </div>
@@ -29,7 +29,7 @@ title: Office & Company - Pasadena Coworking Studio
             <div class="container">
                 <div class="carousel-caption">
                     <h2>We're different</h2>
-                    <p class="lead">Unlike other coworking spaces, our goal is to avoid overcrowding. We want our members to enjoy an ample amount of personal workspace, which is why we only have a capacity of 8 members.</p>
+                    <p class="lead">Unlike other coworking spaces our goal is to avoid overcrowding. We want our members to enjoy an ample amount of personal workspace so we only have a capacity of 8 members.</p>
                 </div>
             </div>
         </div>
@@ -48,60 +48,51 @@ title: Office & Company - Pasadena Coworking Studio
             <div class="feature-image"><i class="icon-group"></i></div>
             <h2 class="feature-heading">Good Company</h2>
             <p class="lead">Work alongside other talented people.</p>
-            <a class="btn btn-default hidden" href="/about">Learn more about us &rsaquo;</a>
         </div>
         <div class="col-sm-4 feature">
             <div class="feature-image"><i class="icon-tag"></i></div>
             <h2 class="feature-heading">Simple Pricing</h2>
-            <p class="lead">$375/month for full-time membership.</p>
-            <a class="btn btn-default hidden" href="/pricing">See what's included &rsaquo;</a>
+            <p class="lead">$375/month. Membership includes: personal desk, premium chair, high speed internet, and 24/7 access.</p>
+            <ul class="icons-ul list-unstyled text-left hidden">
+                <li class="lead"><i class="icon-li icon-check"></i>Personal desk and premium chair</li>
+                <li class="lead"><i class="icon-li icon-check"></i>High speed internet access</li>          
+                <li class="lead"><i class="icon-li icon-check"></i>24/7 access</li>
+            </ul>
         </div>
         <div class="col-sm-4 feature">
             <div class="feature-image"><i class="icon-map-marker"></i></div>
             <h2 class="feature-heading">Great Location</h2>
             <p class="lead">Right in the heart of Pasadena.</p>
-            <a class="btn btn-default hidden" href="/location">See what's nearby &rsaquo;</a>
         </div>
     </div>
 </div>
-<hr/>
-<div class="container section membership">
+<div class="container section">
     <div class="row">
-        <div class="col-lg-4 col-offset-4">
-            <h2 class="section-heading">Membership includes</h2>
-            <ul class="icons-ul list-unstyled">
-                <li class="lead"><i class="icon-li icon-check"></i>Personal desk and premium chair</li>
-                <li class="lead"><i class="icon-li icon-check"></i>High speed internet access</li>
-                <li class="lead"><i class="icon-li icon-check"></i>Business address and mail collection</li>                
-                <li class="lead"><i class="icon-li icon-check"></i>24/7 access</li>
+        <div class="col-sm-6">
+            <h2 class="section-heading text-center">Want to check out our space?</h2>
+            <p class="lead text-center"><a href="mailto:contact@officeandcompany.com?subject=Show me the space!">Drop us a line</a> to schedule a visit!</p>        
+        </div>
+        <div class="col-sm-6 contact">
+            <ul class="media-list contact-list">
+                <li class="media">
+                    <div class="media-object pull-left"><i class="icon-envelope"></i></div>
+                    <div class="media-body"><a href="mailto:contact@officeandcompany.com">contact@officeandcompany.com</a></div>
+                </li>
+                <li class="media">
+                    <div class="media-object pull-left"><i class="icon-phone"></i></div>
+                    <div class="media-body">626.498.1803</div>
+                </li>
+                <li class="media">
+                    <div class="media-object pull-left"><i class="icon-map-marker"></i></div>
+                    <div class="media-body">
+                        <address>
+                            <strong>Office &amp; Company</strong><br/>
+                            638 E. Colorado Blvd. #301<br/>
+                            Pasadena, <abbr title="California">CA</abbr> 91101<br/>
+                        </address>
+                    </div>
+                </li>
             </ul>
         </div>
-    </div>
-</div>
-<hr/>
-<div class="container section">
-    <h2 class="section-heading text-center">Want to check out our space?</h2>
-    <p class="lead text-center"><a href="mailto:contact@officeandcompany.com?subject=Show me the space!">Drop us a line</a> to schedule a visit!</p>
-    <div class="contact well">
-    <ul class="media-list">
-        <li class="media">
-            <div class="media-object pull-left"><i class="icon-envelope"></i></div>
-            <div class="media-body"><a href="mailto:contact@officeandcompany.com">contact@officeandcompany.com</a></div>
-        </li>
-        <li class="media">
-            <div class="media-object pull-left"><i class="icon-phone"></i></div>
-            <div class="media-body">626.498.1803</div>
-        </li>
-        <li class="media">
-            <div class="media-object pull-left"><i class="icon-map-marker"></i></div>
-            <div class="media-body">
-                <address>
-                    <strong>Office &amp; Company</strong><br/>
-                    638 E. Colorado Blvd. #301<br/>
-                    Pasadena, <abbr title="California">CA</abbr> 91101<br/>
-                </address>
-            </div>
-        </li>
-    </ul>
     </div>
 </div>
